--- a/frontend/src/components/Home.module.css
+++ b/frontend/src/components/Home.module.css
@@ -1,4 +1,4 @@
-.home {
+/* .home {
     text-align: center;
     margin-top: 50px;
 }
@@ -11,4 +11,4 @@
 .description {
     font-size: 1.0em;
     color: #666;
-}
+} */
