--- a/frontend/src/components/Dashboard.module.css
+++ b/frontend/src/components/Dashboard.module.css
@@ -5,6 +5,10 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin: 20px;
     color: #555;
+    background-image: url('https://slidescorner.com/wp-content/uploads/2023/08/01-Aesthetic-Medical-Healthcare-Technology-and-Innovation-Medicine-PPT-Background-by-SlidesCorner.com_-300x300.jpg?v=1693027773');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
   }
   
   h1 {
@@ -16,4 +20,3 @@
     font-size: 16px;
     color: #555;
   }
-  
