--- a/frontend/src/components/Header.module.css
+++ b/frontend/src/components/Header.module.css
@@ -1,75 +1,3 @@
-/* Header.module.css
-
-.header {
-  background-color: #007bff7a;
-  color: #fff;
-  padding: 15px 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
-
-.header h1 {
-  font-size: 2rem;
-  margin: 0;
-}
-
-.nav {
-  display: flex;
-  align-items: center;
-}
-
-.navList {
-  list-style: none;
-  display: flex;
-  margin: 0;
-  padding: 0;
-}
-
-.navItem {
-  margin-right: 20px;
-}
-
-.navLink {
-  color: #ffffff;
-  text-decoration: none;
-  font-size: 1rem;
-  transition: color 0.3s ease;
-  border-radius: 2px;
-}
-
-.navLink:hover {
-  color: tomato;
-  padding: 5px;
-}
-
-.authList {
-  display: flex;
-  align-items: center;
-}
-
-#navLink {
-  color: rgb(255, 66, 32);
-  text-decoration: none;
-  font-size: 1rem;
-  transition: color 0.3s ease;
-  border-radius: 2px;
-  background-color: rgb(255, 255, 255);
-  padding: 5px;
-}
-
-#navLink:hover {
-  background-color: tomato;
-  color: #ffffff;
-}
-
-.separator {
-  margin: 0 10px;
-  color: #fff;
-  font-size: 1.2rem;
-} */
-
 .header {
   display: flex;
   justify-content: space-between;
@@ -103,7 +31,7 @@
 
 .logoutButton {
   background-color: #007bff;
-  color: white;  /* Ensure the text color is white */
+  color: white;
   border: none;
   padding: 8px 15px;
   border-radius: 3px;
