--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -75,6 +75,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-image: url('https://png.pngtree.com/background/20210716/original/pngtree-light-blue-cute-striped-baby-blue-background-picture-image_1348681.jpg');
 }
 
 .main-content {
