--- a/frontend/src/components/LandingPage.module.css
+++ b/frontend/src/components/LandingPage.module.css
@@ -5,7 +5,7 @@
   margin: 0 auto;
   padding: 80px 100px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0.507);
 }
 
 .header {
