--- a/frontend/src/components/LoginForm.module.css
+++ b/frontend/src/components/LoginForm.module.css
@@ -4,10 +4,11 @@
   align-items: center;
   height: 100vh;
   background-color: #f0f2f5;
+  background-image: url('https://png.pngtree.com/background/20210716/original/pngtree-light-blue-cute-striped-baby-blue-background-picture-image_1348681.jpg');
 }
 
 .loginForm {
-  background: #ffffff;
+  background: #ffffffc0;
   padding: 40px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
