--- a/frontend/src/components/RegisterDoctor.module.css
+++ b/frontend/src/components/RegisterDoctor.module.css
@@ -4,10 +4,11 @@
     align-items: center;
     height: 100vh;
     background-color: #f7f7f7;
+    background-image: url('https://png.pngtree.com/background/20210716/original/pngtree-light-blue-cute-striped-baby-blue-background-picture-image_1348681.jpg');
   }
   
   .registerForm {
-    background: #ffffff;
+    background: #ffffffa1;
     padding: 40px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
