--- a/frontend/src/components/RegisterForm.module.css
+++ b/frontend/src/components/RegisterForm.module.css
@@ -1,59 +1,3 @@
-/* .registerForm {
-  width: 100%;
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 30px 20px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
-  text-align: center;
-}
-
-.formField {
-  margin-bottom: 15px;
-  align-content: center;
-  text-align: center;
-}
-
-.formField label {
-  font-weight: bold;
-  margin-bottom: 5px;
-}
-
-.formField input {
-  padding: 10px;
-  width: 100%;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 1rem;
-}
-
-button {
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 1rem;
-  transition: background-color 0.3s ease;
-  padding-left: 20px;
-}
-
-button:hover {
-  background-color: #0056b3;
-}
-
-.successMessage {
-  margin-top: 15px;
-  padding: 10px;
-  background-color: #d4edda;
-  color: #155724;
-  border: 1px solid #c3e6cb;
-  border-radius: 4px;
-} */
-/* RegisterForm.module.css */
-
 .everything {
   display: flex;
   flex-direction: column;
@@ -61,10 +5,11 @@ button:hover {
   justify-content: center;
   height: 100vh;
   background-color: #f0f2f5;
+  background-image: url('https://png.pngtree.com/background/20210716/original/pngtree-light-blue-cute-striped-baby-blue-background-picture-image_1348681.jpg');
 }
 
 .registerForm {
-  background: #ffffff;
+  background: #ffffff9d;
   padding: 40px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -111,6 +56,21 @@ button {
 
 button:hover {
   background-color: #0056b3;
+}
+
+.loginRedirect {
+  color: #333;
+  font-weight: 400;
+}
+
+.redirectButton {
+  color: #007bff;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.redirectButton:hover {
+  color: #0056b3;
 }
 
 .errorMessage {
